--- a/views/layout.erb
+++ b/views/layout.erb
@@ -56,7 +56,7 @@
 
 			<div>
 
-				<%if @error then%>
+				<%if @error %>
 					<div class="alert alert-danger"><%= @error%></div>
 				<% end %>
 
